kubernetes/statefulset/mysql-headless-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mysql-headless
  namespace: card-processing

spec:
  clusterIP: None

  selector:
    app: mysql

  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
