kubernetes/statefulset/mysql-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mysql-service
  namespace: card-processing

spec:
  selector:
    app: mysql

  ports:
  - port: 3306
    targetPort: 3306
